--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -209,8 +209,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     fab:fab_icon="@drawable/ic_plus"
-    fab:fab_colorNormal="@color/accent"
-    fab:fab_colorPressed="@color/accent_darker"
+    fab:fab_colorNormal="@color/primary_dark"
+    fab:fab_colorPressed="@color/primary"
     android:layout_alignParentBottom="true"
     android:layout_centerHorizontal="true"
     android:layout_marginBottom="16dp"
