--- a/app/src/main/res/layout/fragment_create_new_event.xml
+++ b/app/src/main/res/layout/fragment_create_new_event.xml
@@ -149,7 +149,7 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:orientation="vertical"
                 >
-                <EditText
+                <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/add_event_edit_height"
                     android:layout_marginBottom="@dimen/vertical_8_margin"
