--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -95,23 +95,17 @@
                     android:textColor="@color/body_dark"
                     android:layout_marginBottom="24dp" />
 
-                <LinearLayout
-                    android:orientation="horizontal"
+                <RelativeLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="8dp"
-                    android:paddingBottom="8dp">
+                    android:padding="16dp">
 
                     <ImageView
-                        android:id="@+id/imageView2"
+                        android:id="@+id/cat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_other"
-                        android:layout_alignParentTop="false"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp" />
+                        android:layout_centerVertical="true" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -121,10 +115,9 @@
                         android:textColor="@color/accent"
                         android:textStyle="bold"
                         android:textAlignment="gravity"
-                        android:layout_gravity="center_vertical|right"
-                        android:layout_marginRight="@dimen/keyline_1" />
-
-                </LinearLayout>
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true" />
+                </RelativeLayout>
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -223,14 +216,14 @@
     </com.bdlabs_linku.linku.ObservableScrollView>
 
     <com.getbase.floatingactionbutton.FloatingActionButton
-    android:id="@+id/join_event_btn"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    fab:fab_icon="@drawable/ic_plus"
-    fab:fab_colorNormal="@color/primary_dark"
-    fab:fab_colorPressed="@color/primary"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="16dp"
-    android:layout_gravity="right|bottom" />
+        android:id="@+id/join_event_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        fab:fab_icon="@drawable/ic_confirm"
+        fab:fab_colorNormal="@color/primary_dark"
+        fab:fab_colorPressed="@color/primary"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:layout_gravity="right|bottom" />
 </FrameLayout>
