--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -1,7 +1,12 @@
-<com.bdlabs_linku.linku.FragmentViewPager
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pager"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.bdlabs_linku.linku.EventsActivity" />
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    tools:context="com.bdlabs_linku.linku.EventsActivity" >
+
+    <com.bdlabs_linku.linku.FragmentViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</FrameLayout>
