--- a/app/src/main/res/layout/no_internet.xml
+++ b/app/src/main/res/layout/no_internet.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Connect to a network, then try again."/>
+        android:text="@string/no_internet"/>
 
     <Button
         android:id="@+id/refresh_button"
