--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     tools:context="com.bdlabs_linku.linku.EventsActivity" >
 
     <com.bdlabs_linku.linku.FragmentViewPager
@@ -9,4 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_event_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        fab:fab_icon="@drawable/ic_plus"
+        fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/accent_darker"
+        android:layout_gravity="right|bottom" />
 </FrameLayout>
