--- a/app/src/main/res/layout/fragment_events_list.xml
+++ b/app/src/main/res/layout/fragment_events_list.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent"
     tools:context="com.bdlabs_linku.linku.EventsFragment">
 
-    <ListView
-        android:id="@android:id/list"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dividerHeight="0dp"
-        android:divider="@null"
-        android:drawSelectorOnTop="true"/>
+        android:divider="@null"/>
 
     <TextView
         android:id="@+id/empty_events"
