--- a/app/src/main/res/layout/fragment_edit_event.xml
+++ b/app/src/main/res/layout/fragment_edit_event.xml
@@ -1,6 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            tools:context="com.bdlabs_linku.linku.EditEventActivity"
+            tools:context="com.bdlabs_linku.linku.CreateNewEventActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
@@ -11,188 +11,200 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            >
+            android:paddingBottom="@dimen/activity_vertical_margin" >
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_marginLeft="@dimen/add_event_edit_horizontal_margin"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:layout_marginLeft="@dimen/keyline_2_minus_16dp"
+                android:layout_height="@dimen/vertical_48dp"
+                android:orientation="vertical">
             <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/add_event_edit_height"
-                    android:layout_marginBottom="@dimen/vertical_8_margin"
+                    android:layout_height="wrap_content"
                     android:id="@+id/event_title_input"
                     android:inputType="text"
                     android:textColor="@color/black_87"
                     android:textSize="@dimen/add_event_title"
-                    android:gravity="bottom|left"
                     android:hint="@string/placeholder_events_item_title"
                     android:textColorHint="@color/edit_hint"
-                    android:background="#00000000"
-                    android:imeOptions="actionDone" />
-
-            <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_grey"
-                    android:layout_marginBottom="@dimen/vertical_8_margin" />
+                    android:imeOptions="actionNext" />
         </LinearLayout>
+
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_marginLeft="@dimen/add_event_edit_horizontal_margin"
-                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/keyline_2_minus_16dp"
+                android:layout_height="@dimen/vertical_48dp"
                 android:orientation="vertical"
-                >
+                android:gravity="bottom">
             <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/add_event_edit_height"
-                    android:layout_marginBottom="@dimen/vertical_8_margin"
+                    android:layout_height="wrap_content"
                     android:id="@+id/event_description_input"
                     android:inputType="text"
                     android:textColor="@color/black_87"
                     android:textSize="@dimen/add_event_fields"
-                    android:gravity="bottom|left"
                     android:hint="@string/placeholder_events_item_description"
                     android:textColorHint="@color/edit_hint"
-                    android:background="#00000000"
-                    android:imeOptions="actionDone" />
+                    android:imeOptions="actionNext" />
 
-            <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_grey"
-                    android:layout_marginBottom="@dimen/vertical_8_margin" />
         </LinearLayout>
 
-        <!-- pick day and time -->
+        <!-- pick date and time -->
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="@dimen/vertical_8_margin" >
+                android:layout_height="@dimen/vertical_48dp"
+                android:orientation="horizontal" >
             <ImageView
                     android:layout_width="@dimen/image_icon"
                     android:layout_height="@dimen/image_icon"
-                    android:src="@drawable/ic_time"/>
-            <!-- pick day -->
+                    android:src="@drawable/ic_time"
+                    android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
+                    android:layout_marginRight="@dimen/keyline_1_minus_8dp"
+                    android:layout_gravity="center" />
             <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:orientation="vertical"
-                    >
-                <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/add_event_edit_height"
-                        android:layout_marginBottom="@dimen/vertical_8_margin"
-                        android:id="@+id/event_day_input"
-                        android:textColor="@color/edit_hint"
-                        android:textSize="@dimen/add_event_fields"
-                        android:textAllCaps="false"
-                        android:gravity="left|center_vertical"
-                        android:text="@string/placeholder_events_item_day"
-                        android:drawableRight="@drawable/ic_down"
-                        android:background="#00000000"
-                        android:onClick="dayPicker"
-                        />
-                <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider_grey"/>
-            </LinearLayout>
-            <!-- pick time -->
-            <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:orientation="vertical"
-                    >
-                <Button
-                        android:layout_width="fill_parent"
-                        android:layout_height="@dimen/add_event_edit_height"
-                        android:layout_marginBottom="@dimen/vertical_8_margin"
-                        android:id="@+id/event_time_input"
-                        android:textColor="@color/edit_hint"
-                        android:textSize="@dimen/add_event_fields"
-                        android:text="@string/placeholder_events_item_time"
-                        android:textAllCaps="false"
-                        android:gravity="left|center_vertical"
-                        android:drawableRight="@drawable/ic_down"
-                        android:background="#00000000"
-                        android:onClick="timePicker"
-                        />
-                <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider_grey"
-                        />
+                    android:weightSum="2"
+                    android:layout_gravity="bottom"
+                    android:gravity="bottom"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp">
+
+                <!-- pick date -->
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:orientation="vertical"
+                        android:weightSum="2"
+                        android:layout_weight="1">
+                    <Button
+                            android:layout_width="fill_parent"
+                            android:layout_height="@dimen/vertical_48dp_minus_8dp"
+                            android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
+                            android:id="@+id/event_day_input"
+                            android:textColor="@color/edit_hint"
+                            android:textSize="@dimen/add_event_fields"
+                            android:textAllCaps="false"
+                            android:gravity="center_vertical|left"
+                            android:text="@string/placeholder_events_item_day"
+                            android:drawableRight="@drawable/ic_down"
+                            android:background="#00000000"
+                            android:onClick="datePicker"
+                            />
+                    <View
+                            android:layout_width="fill_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/divider_grey"/>
+                </LinearLayout>
+
+                <!-- pick time -->
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:orientation="vertical"
+                        android:layout_weight="1" >
+                    <Button
+                            android:layout_width="fill_parent"
+                            android:layout_height="@dimen/vertical_48dp_minus_8dp"
+                            android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
+                            android:id="@+id/event_time_input"
+                            android:textColor="@color/edit_hint"
+                            android:textSize="@dimen/add_event_fields"
+                            android:text="@string/placeholder_events_item_time"
+                            android:textAllCaps="false"
+                            android:gravity="left|center_vertical"
+                            android:drawableRight="@drawable/ic_down"
+                            android:background="#00000000"
+                            android:onClick="timePicker"
+                            />
+                    <View
+                            android:layout_width="fill_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/divider_grey"
+                            />
+                </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
         <!-- pick location -->
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="@dimen/vertical_8_margin" >
+                android:layout_height="@dimen/vertical_48dp"
+                android:orientation="horizontal">
             <ImageView
                     android:layout_width="@dimen/image_icon"
                     android:layout_height="@dimen/image_icon"
-                    android:src="@drawable/ic_position"/>
+                    android:src="@drawable/ic_position"
+                    android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
+                    android:layout_marginRight="@dimen/keyline_1_minus_8dp"
+                    android:layout_gravity="center" />
             <!-- pick location -->
             <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:orientation="vertical"
-                    >
+                    android:gravity="bottom">
                 <AutoCompleteTextView
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/add_event_edit_height"
-                        android:layout_marginBottom="@dimen/vertical_8_margin"
+                        android:layout_height="wrap_content"
                         android:id="@+id/event_location_input"
                         android:inputType="text"
                         android:textColor="@color/black_87"
                         android:textSize="@dimen/add_event_fields"
-                        android:gravity="bottom|left"
+                        android:gravity="bottom"
                         android:hint="@string/placeholder_events_item_location"
                         android:textColorHint="@color/edit_hint"
-                        android:background="#00000000"
                         android:imeOptions="actionDone"
                         android:focusable="true"
                         android:clickable="true"
                         android:editable="true"
                         android:enabled="true"
                         android:focusableInTouchMode="true" />
-                <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider_grey"/>
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_marginLeft="@dimen/add_event_edit_horizontal_margin"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/vertical_48dp"
+                android:layout_marginBottom="@dimen/keyline_1_minus_8dp" >
 
-            <Spinner
-                    android:layout_width="match_parent"
+            <ImageView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/category"
-                    android:prompt="@string/placeholder_category"
-                    android:paddingTop="16dp"
-                    android:paddingBottom="16dp"/>
+                    android:id="@+id/cat_icon"
+                    android:src="@drawable/ic_outdoor"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp" />
 
-            <View
-                    android:layout_width="fill_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/divider_grey"
-                    android:layout_marginBottom="@dimen/vertical_8_margin" />
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/keyline_1"
+                    android:gravity="center_vertical"
+                    android:paddingRight="4dp"
+                    android:paddingLeft="4dp">
+
+                <Spinner
+                        android:layout_width="match_parent"
+                        android:layout_height="fill_parent"
+                        android:id="@+id/category"
+                        android:prompt="@string/placeholder_category"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_vertical" />
+
+                <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider_grey" />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
